--- a/PopQv01/app/src/main/res/layout/activity_main.xml
+++ b/PopQv01/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,12 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <!-- include layout="@layout/content_main" / -->
+
+    <ListView
+        android:id="@+id/main_activity_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
